[gd_scene load_steps=2 format=3 uid="uid://b4hjk8l2m3n4p"]

[ext_resource type="Script" uid="uid://cdm31v0a51snw" path="res://scripts/UI.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="TopBar" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 150.0
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="DayLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 40.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 36
text = "Day 1"

[node name="OrdersLabel" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 840.0
offset_top = 20.0
offset_right = 1040.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 36
text = "0/5"
horizontal_alignment = 2

[node name="OrderPanel" type="Panel" parent="."]
offset_left = 80.0
offset_top = 200.0
offset_right = 1000.0
offset_bottom = 400.0

[node name="OrderTitle" type="Label" parent="OrderPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 900.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Current Order"

[node name="OrderDetails" type="Label" parent="OrderPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 900.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 28
text = "Whipped Cream Crepe"
horizontal_alignment = 1
vertical_alignment = 1
